overflow-x fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+
 .spinner {
   width: 56px;
   height: 56px;
